--- a/mobile/message.html
+++ b/mobile/message.html
@@ -90,7 +90,7 @@
 		<a class="btn btn-default" href="./index.html">往期回顾</a>
 		<!-- <a class="btn btn-success" href="./index.html#add">＋关注</a> -->
 	</div>
-	<h2>悄悄在留言区留下您的芳踪噢 ღ：</h2>
+	<h2>悄悄留下您的芳踪噢 ღ：</h2>
 	<div class="message-box">
 		<!-- UY BEGIN -->
 		<div id="uyan_frame"></div>
