--- a/mobile/message.html
+++ b/mobile/message.html
@@ -7,88 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="renderer" content="webkit">
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/message.css">
 	<title>留言板</title>
-	<style>
-		*{
-			margin:0;
-			padding:0;
-		}
-		body{
-    		-webkit-user-select:none;
-    		-moz-user-select:none;
-    		-ms-user-select:none;
-    		user-select:none;
-		}
-		.clearfix:after{
-			content:'.'; 
-			display:block;
-			height:0;
-			clear:both;
-			visibility:hidden 
-		}
-		.clearfix{
-			zoom:1;
-		}
-		.header{
-			height:60px;
-			width:100%;
-			overflow: hidden;
-			/*margin-right:100px;*/
-			margin-bottom:10px;
-			border-bottom:1px solid #eee;
-		}
-		.header>.logo{
-			float:left;
-			width:60px;
-			height:60px;
-			border:none;
-		}
-		.header .website{
-			float:left;
-			height:60px;
-			line-height: 60px;
-			font-size:20px;
-			color:#999;
-			text-align: center;
-			text-indent: 8px;
-		}
-		.header .btn {
-			float:right;
-			margin-right:15px;
-			margin-top:15px;
-			vertical-align: middle;
-		}
-		h2{
-			margin:20px 15px;
-			margin-top:0;
-			color:#666;
-			font-size:20px;
-			line-height: 50px;
-			border-bottom:1px solid #ff8967;
-		}
-		.message-box{
-			margin:0 15px;
-		}
-		@media screen and (min-width:768px){
-			.header{
-				padding:0 60px;
-			}
-			h2{
-				margin:20px 76px;
-			}
-			.message-box{
-				padding:0 76px;
-			}
-		}
-	</style>
 </head>
 <body>
 	<div class="header clearfix" id="header">
 		<img class="logo" src="../images/logo.jpg" alt="">
 		<p class="website">huandoo.cn</p>
-		<!-- <a class="btn btn-default" href="javascript:void(0)" onclick="location.reload()">刷新</a> -->
 		<a class="btn btn-default" href="./index.html">往期回顾</a>
-		<!-- <a class="btn btn-success" href="./index.html#add">＋关注</a> -->
 	</div>
 	<h2>悄悄留下您的芳踪噢 ღ：</h2>
 	<div class="message-box">
