--- a/love/index.html
+++ b/love/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>HTML5浪漫爱心表白动画在线演示</title>
+<title>love you forever</title>
 
 <style type="text/css">
 @font-face {
@@ -51,7 +51,7 @@
 				</div>
 				<div id="loveu">
 					爱你直到永永远远。<br/>
-					<div class="signature">- 陈先生</div>
+					<div class="signature">- kevin</div>
 				</div>
 			</div>
 		</div>
@@ -85,7 +85,7 @@ if (!document.createElement('canvas').getContext) {
 	timeElapse(together);
 	setInterval(function () {
 		timeElapse(together);
-	}, 4500);
+	}, 500);
 
 	adjustCodePosition();
 	$("#code").typewriter();
