--- a/college1.html
+++ b/college1.html
@@ -2,62 +2,85 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>还读我诗，往期优秀诗篇</title>
+	<title>还读我诗开始征稿啦！</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
-	<link rel="stylesheet" href="./css/list.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<style>
-		.zhenggao{
-			width:1050px;
-			height:80px;
-			margin:30px auto;
-			border:1px solid #eee;
-			border-radius: 5px;
-			overflow: hidden;
+		body{
+			background: #fff;
 		}
-		.zhenggao>a{
-			display:block;
+		.header-cont{
+			width:1000px;
+		}
+		.box{
+			padding:10px 0;
 			width:100%;
-			height:80px;
-			line-height: 80px;
+			/*background: url(./images/college_bg.jpg) no-repeat 100% 100%;*/
+			background-size: cover;
+		}
+		.cont{
+			margin:0 auto;
+			width:1000px;
+			min-height: 650px;
+			color:#999;
+			text-align: center;
+			word-spacing: 200px;
+		}
+		.cont .bt{
+			margin-bottom:50px;
+		}
+		.cont .zhengji{
+			margin-top:66px;
+			margin-bottom:50px;
+			font-size: 60px;
+			letter-spacing: 32px;
+			color:#888;
+		}
+		.cont .title{
+			color:#888;
+			font-size:40px;
+			margin-bottom:10px;
+		}
+		.cont .tiaojian{
+			width:800px;
+			margin:0 auto;
+			margin-bottom: 50px;
 			font-size:32px;
-			color:#bbb;
-			text-align: center;
-			text-decoration: none;
 		}
-		.zhenggao:hover{
-			border: 1px solid #ff8963;
-		}
-		.zhenggao:hover>a{
-			color:#ff8963;
-		}
-		h3.title{
-			width:100%;
-			height:60px;
-			margin-bottom:30px;
-			font-size:26px;
+		.cont .text{
+			font-size:32px;
 			color:#999;
-			line-height: 60px;
-			border-bottom:1px solid #ff8963;
-			font-weight: normal;
 		}
-		.empty{
-			width:100%;
+		.cont .person{
+			margin:0 auto;
+			margin-top:20px;
+			margin-bottom:10px;
+			width:200px;
 			height:200px;
-			line-height: 200px;
-			text-align: center;
-			font-size:24px;
+			border:1px solid #ff8c69;
+		}
+		.cont .person img{
+			width:100%;
+			height:100%;
+			border:none;
+		}
+		.cont .dongdong{
+			margin-bottom:66px;
 			color:#999;
+			font-size:18px;
 		}
 	</style>
 </head>
 <body>
-	<div class="header">
+	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
+        <source src="./song/ganxie.mp3" type="audio/ogg">
+    </audio> -->
+    <div class="header">
 		<div class="header-cont clearfix">
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
@@ -69,34 +92,18 @@
 			</ul>
 		</div>
 	</div>
-	<div class="zhenggao">
-		<a href="./zhenggao.html" target="_blank">大学生征稿活动海报！</a>
-	</div>
-	<div class="content">
-		<h3 class="title">大学生专栏征稿第一期获选文章：</h3>
-		<ul class="clearfix">
-			<li>
-				<div class="img-box">
-					<img src="./images/list_img/article57.jpg" alt="">
-				</div>
-				<p class="msg"><a href="http://mp.weixin.qq.com/s/9K9NNx1ARfeUMjWSV1ddlg" target="_blank">绿豆冰糕 |  屈月</a></p>
-			</li>
-			<li>
-				<div class="img-box">
-					<img src="./images/list_img/article55.jpg" alt="">
-				</div>
-				<p class="msg"><a href="http://mp.weixin.qq.com/s/yfk8hJCTaDnqEjG5WBrvTw" target="_blank">不再仰望星空 |  禾火</a></p>
-			</li>
-			<li>
-				<div class="img-box">
-					<img src="./images/list_img/article54.jpg" alt="">
-				</div>
-				<p class="msg"><a href="http://mp.weixin.qq.com/s/kV59muE1fWLXVAlyGm1IrQ" target="_blank">这本书永远都读不完 |  我给你写信</a></p>
-			</li>
-		</ul>
-
-		<h3 class="title">大学生专栏征稿第二期获选文章：</h3>
-		<p class="empty">暂时未更新，第二期作品紧张征集中..</p>
+	<div class="box">
+		<div class="cont">
+			<p class="zhengji">“稿”事情啦!</p>
+			<p class="title">大学生文学作品征集</p>
+			<p class="tiaojian">稿件要求：主题、观点灵活鲜明，诗歌散文，小说等体裁皆可玩转，"稿"事情非你不可。</p>
+			<p class="title">联系方式</p>
+			<p class="text">huanduwoshi2016@126.com(投稿邮箱)</p>
+			<p class="text">Liyufeng5658(个人微信)</p>
+			<p class="text">YD13772059510(个人微信)</p>
+			<div class="person"><img src="./images/per_dongdong.jpg" alt=""></div>
+			<p class="dongdong">微信扫一扫，加栋栋好友</p>
+		</div>
 	</div>
 	
 	<!-- footer begin -->
