--- a/love/kongchao/index.html
+++ b/love/kongchao/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>love you forever</title>
+<title>Love you forever</title>
 
 <style type="text/css">
 @font-face {
@@ -46,12 +46,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					亲爱的林培，这是我们相爱在一起的时光。
+					亲爱的，这是我们相爱在一起的时光。
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					爱你直到永永远远。<br/>
-					<div class="signature">- 云姣</div>
+					<div class="signature">- 空超</div>
 				</div>
 			</div>
 		</div>
@@ -62,7 +62,7 @@
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
-together.setFullYear(2014, 2, 02);
+together.setFullYear(2017, 5, 04);
 together.setHours(20);
 together.setMinutes(0);
 together.setSeconds(0);
