change mobile page

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -40,9 +40,9 @@
 		$(function() { 
     		$(".flexslider").flexslider({
     			slideshow:true,
-    			slideshowSpeed: 3000, //展示时间间隔ms
+    			slideshowSpeed: 4500, //展示时间间隔ms
 				animationSpeed: 500, //滚动时间ms
-				touch: true, //是否支持触屏滑动
+				touch: false, //是否支持触屏滑动
 				directionNav: false, //箭头
 				animation: "slide", 
 				controlNav: false, //nav list
