change college page

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -52,7 +52,7 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">大学生征稿活动开始啦！详情咨询平台负责人</marquee> 
+       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">走吧走吧，远方一无所有，远方应有尽有。</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div id="article" class="list-cont">
