--- a/college.html
+++ b/college.html
@@ -16,7 +16,7 @@
 			width:1050px;
 			height:80px;
 			margin:30px auto;
-			border:1px solid #eee;
+			border:1px solid #999;
 			border-radius: 5px;
 			overflow: hidden;
 		}
@@ -25,8 +25,8 @@
 			width:100%;
 			height:80px;
 			line-height: 80px;
-			font-size:32px;
-			color:#bbb;
+			font-size:24px;
+			color:#ff8963;
 			text-align: center;
 			text-decoration: none;
 		}
@@ -35,24 +35,6 @@
 		}
 		.zhenggao:hover>a{
 			color:#ff8963;
-		}
-		h3.title{
-			width:100%;
-			height:60px;
-			margin-bottom:30px;
-			font-size:26px;
-			color:#999;
-			line-height: 60px;
-			border-bottom:1px solid #ff8963;
-			font-weight: normal;
-		}
-		.empty{
-			width:100%;
-			height:200px;
-			line-height: 200px;
-			text-align: center;
-			font-size:24px;
-			color:#999;
 		}
 	</style>
 </head>
@@ -70,10 +52,11 @@
 		</div>
 	</div>
 	<div class="zhenggao">
-		<a href="./zhenggao.html" target="_blank">大学生征稿活动海报！</a>
+		<a href="./zhenggao.html" target="_blank">
+			<marquee behavior="alternate" direction="" scrollamount="3" onmouseover="this.stop()" onmouseout="this.start()" >走吧走吧，远方一无所有，远方应有尽有。</marquee> 
+		</a>
 	</div>
 	<div class="content">
-		<h3 class="title">大学生专栏征稿第一期获选文章：</h3>
 		<ul class="clearfix">
 			<li>
 				<div class="img-box">
@@ -94,9 +77,6 @@
 				<p class="msg"><a href="http://mp.weixin.qq.com/s/kV59muE1fWLXVAlyGm1IrQ" target="_blank">这本书永远都读不完 |  我给你写信</a></p>
 			</li>
 		</ul>
-
-		<h3 class="title">大学生专栏征稿第二期获选文章：</h3>
-		<p class="empty">暂时未更新，第二期作品紧张征集中..</p>
 	</div>
 	
 	<!-- footer begin -->
