change college page

--- a/college.html
+++ b/college.html
@@ -16,7 +16,7 @@
 			width:1050px;
 			height:80px;
 			margin:30px auto;
-			border:1px solid #999;
+			border-bottom:1px dashed #999;
 			border-radius: 5px;
 			overflow: hidden;
 		}
@@ -29,9 +29,6 @@
 			color:#ff8963;
 			text-align: center;
 			text-decoration: none;
-		}
-		.zhenggao:hover{
-			border: 1px solid #ff8963;
 		}
 		.zhenggao:hover>a{
 			color:#ff8963;
@@ -53,7 +50,7 @@
 	</div>
 	<div class="zhenggao">
 		<a href="./zhenggao.html" target="_blank">
-			<marquee behavior="alternate" direction="" scrollamount="3" onmouseover="this.stop()" onmouseout="this.start()" >走吧走吧，远方一无所有，远方应有尽有。</marquee> 
+			<marquee behavior="" direction="" scrollamount="3" onmouseover="this.stop()" onmouseout="this.start()" >走吧走吧，远方一无所有，远方应有尽有。</marquee> 
 		</a>
 	</div>
 	<div class="content">
