--- a/mobile/index.html
+++ b/mobile/index.html
@@ -52,7 +52,7 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">走吧走吧，远方一无所有，远方应有尽有。</marquee> 
+       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">大学生文学作品征稿了！“还读我诗”公众号平台新近推出大学生文学作品专栏，想不想把你自己的故事讲给我们听呢？可将故事以诗歌、小说、散文等形式分享给我们，每篇100元稿酬等你拿哦！投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信)。</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
 	<div id="article" class="list-cont">
