change message page

--- a/message.html
+++ b/message.html
@@ -9,32 +9,8 @@
 	<meta name="description" content="" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
+	<link rel="stylesheet" href="./css/message.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
-	<style>
-		body{
-			background: #fff;
-		}
-		.header-cont{
-			width:1000px;
-		}
-		.message-box{
-			width:1000px;
-			margin:0 auto;
-		}
-		h1{
-			margin:30px 0 60px 0;
-			font-size:24px;
-			/*color:#ff8c69;*/
-			color:#666;
-			font-weight:normal;
-		}
-		.hide{
-			width:100%;
-			height:20px;
-			margin-top:-20px;
-			background: #AAB2B8;
-		}
-	</style>
 </head>
 <body>
     <div class="header">
