--- a/college.html
+++ b/college.html
@@ -9,50 +9,8 @@
 	<meta name="description" content="" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
-	<link rel="stylesheet" href="./css/list.css">
+	<link rel="stylesheet" href="./css/college.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
-	<style>
-		.zhenggao{
-			width:1050px;
-			height:80px;
-			margin:30px auto;
-			line-height: 80px;
-			font-size:20px;
-			color:#ff8963;
-			text-align: center;
-			border-bottom:1px dashed #999;
-			border-radius: 5px;
-			overflow: hidden;
-			cursor:pointer;
-		}
-		.lianxi{
-			position:fixed;
-			top:50%;
-			right:10px;
-			margin-top:-25px;
-			padding:5px 0;
-			width:60px;
-			text-align: center;
-			border:1px solid #eee;
-			color:#666;
-			cursor:pointer;
-		}
-		.erweima{
-			position:fixed;
-			top:50%;
-			right:80px;
-			margin-top:-100px;
-			width:200px;
-			height:200px;
-			border:1px solid #ff8962;
-			display:none;
-		}
-		.erweima img{
-			width:100%;
-			border:none;
-			z-index: 
-		}
-	</style>
 </head>
 <body>
 	<div class="header">
@@ -75,18 +33,21 @@
 			<li>
 				<div class="img-box">
 					<img src="./images/list_img/article57.jpg" alt="">
+					<span class="cover"></span>
 				</div>
 				<p class="msg"><a href="http://mp.weixin.qq.com/s/9K9NNx1ARfeUMjWSV1ddlg" target="_blank">绿豆冰糕 |  屈月</a></p>
 			</li>
 			<li>
 				<div class="img-box">
 					<img src="./images/list_img/article55.jpg" alt="">
+					<span class="cover">西安翻译学院／王康荣</span>
 				</div>
 				<p class="msg"><a href="http://mp.weixin.qq.com/s/yfk8hJCTaDnqEjG5WBrvTw" target="_blank">不再仰望星空 |  禾火</a></p>
 			</li>
 			<li>
 				<div class="img-box">
 					<img src="./images/list_img/article54.jpg" alt="">
+					<span class="cover"></span>
 				</div>
 				<p class="msg"><a href="http://mp.weixin.qq.com/s/kV59muE1fWLXVAlyGm1IrQ" target="_blank">这本书永远都读不完 |  我给你写信</a></p>
 			</li>
