change coloege page scrollText

--- a/college.html
+++ b/college.html
@@ -25,8 +25,8 @@
 			</ul>
 		</div>
 	</div>
-	<div class="zhenggao">
-		<marquee behavior="" direction="" scrollamount="8" onmouseover="this.stop()" onmouseout="this.start()" >大学生文学作品征稿了！“还读我诗”公众号平台新近推出大学生文学作品专栏，想不想把你自己的故事讲给我们听呢？可将故事以诗歌、小说、散文等形式分享给我们，每篇100元稿酬等你拿哦！投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信)。</marquee> 
+	<div class="scrolltext">
+		<marquee class="text" behavior="" direction="" scrollamount="8" onmouseover="this.stop()" onmouseout="this.start()" >大学生文学作品征稿了！“还读我诗”公众号平台新近推出大学生文学作品专栏，想不想把你自己的故事讲给我们听呢？可将故事以诗歌、小说、散文等形式分享给我们，每篇100元稿酬等你拿哦！投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信)。</marquee> 
 	</div>
 	<div class="content">
 		<ul class="clearfix">
