change college page

--- a/article_list.html
+++ b/article_list.html
@@ -26,6 +26,9 @@
 			</ul>
 		</div>
 	</div>
+	<div class="scrolltext">
+		<marquee behavior="" direction="" scrollamount="8" onmouseover="this.stop()" onmouseout="this.start()" >还读我诗公众号长期征稿，诗歌小说散文等题材不限，三十每篇根据阅读量累加奖金，推荐朋友投稿一经采用有二十酬谢推荐者。</marquee> 
+	</div>
 	<div class="content">
 		<ul id="article" class="clearfix">
 			<li v-for="item in items">
