--- a/college.html
+++ b/college.html
@@ -32,22 +32,25 @@
 		<ul class="clearfix">
 			<li>
 				<div class="img-box">
+					<img src="./images/list_img/article60.jpg" alt="">
+				</div>
+				<p class="msg"><a href="http://mp.weixin.qq.com/s/8P2Hn0geelCMVDZCvTQjtQ" target="_blank">原谅我不懂你的悲伤 |  我给你写信</a></p>
+			</li>
+			<li>
+				<div class="img-box">
 					<img src="./images/list_img/article57.jpg" alt="">
-					<span class="cover"></span>
 				</div>
 				<p class="msg"><a href="http://mp.weixin.qq.com/s/9K9NNx1ARfeUMjWSV1ddlg" target="_blank">绿豆冰糕 |  屈月</a></p>
 			</li>
 			<li>
 				<div class="img-box">
 					<img src="./images/list_img/article55.jpg" alt="">
-					<span class="cover">西安翻译学院／王康荣</span>
 				</div>
 				<p class="msg"><a href="http://mp.weixin.qq.com/s/yfk8hJCTaDnqEjG5WBrvTw" target="_blank">不再仰望星空 |  禾火</a></p>
 			</li>
 			<li>
 				<div class="img-box">
 					<img src="./images/list_img/article54.jpg" alt="">
-					<span class="cover"></span>
 				</div>
 				<p class="msg"><a href="http://mp.weixin.qq.com/s/kV59muE1fWLXVAlyGm1IrQ" target="_blank">这本书永远都读不完 |  我给你写信</a></p>
 			</li>
