--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 	<div class="content">
 		<h1>“还读我诗”团队</h1>
 		<div class="about">
-			<p>在坚硬的岁月里，写一首绵软的诗。</p>
+			<p>在坚硬的岁月里，写一首绵软的诗</p>
 		</div>
 		<h1>联系我们</h1>
 		<div class="msg clearfix">
