change list page

--- a/article_list.html
+++ b/article_list.html
@@ -27,7 +27,7 @@
 		</div>
 	</div>
 	<div class="scrolltext">
-		<marquee behavior="" direction="" scrollamount="8" onmouseover="this.stop()" onmouseout="this.start()" >还读我诗公众号长期征稿，诗歌小说散文等题材不限，三十每篇根据阅读量累加奖金，推荐朋友投稿一经采用有二十酬谢推荐者。</marquee> 
+		<marquee behavior="" direction="" scrollamount="8" onmouseover="this.stop()" onmouseout="this.start()" >"还读我诗"公众号平台征稿啦！诗歌、小说、散文等，题材不限，稿酬30元／篇，奖金根据阅读量累计。可推荐投稿，一经采用有20元／篇酬谢推荐者。投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信),欢迎大家的参与！</marquee> 
 	</div>
 	<div class="content">
 		<ul id="article" class="clearfix">
@@ -55,6 +55,20 @@
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
 	<!-- footer end -->
+	<div class="lianxi">投稿<br>联系</div>
+	<div class="erweima">
+		<img src="./images/dacheng.jpg" alt="">
+	</div>
+	<script>
+		$(function(){
+			$(".lianxi").mouseover(function(){
+				$(".erweima").fadeIn(500);
+			});
+			$(".lianxi").mouseout(function(){
+				$(".erweima").fadeOut(500);
+			})
+		})
+	</script>
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
 
