del message page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<li><a href="./article_list.html">往期回顾</a></li>
 				<li><a href="./college.html">大学生专栏</a></li>
 				<li><a href="./about.html">关于我们</a></li>
-				<li><a href="./message.html">留言板</a></li>
+				<!-- <li><a href="./message.html">留言板</a></li> -->
 			</ul>
 		</div>
 	</div>
@@ -73,8 +73,8 @@
 			<a href="./index.html">首页</a> ｜ 
 			<a href="./article_list.html">往期回顾</a> ｜ 
 			<a href="./college.html">大学生专栏</a> ｜ 
-			<a href="./about.html">关于我们</a> ｜ 
-			<a href="./message.html">留言板</a> ｜ 
+			<a href="./about.html">关于我们</a>
+			<!-- <a href="./message.html">留言板</a> ｜  -->
 			<a href="http://www.tuling123.com/static/talk/?a=12187%2FbrhR&u=fae01ba1bbfe70131668b038db670691" target="_blank">客服小二</a>
 		</div>
 		<!-- bottom_nav end -->
