--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 				<li><a href="./article_list.html">往期回顾</a></li>
 				<li><a href="./college.html">大学生专栏</a></li>
 				<li class="active"><a href="./about.html">关于我们</a></li>
-				<li><a href="./message.html">留言板</a></li>
+				<!-- <li><a href="./message.html">留言板</a></li> -->
 			</ul>
 		</div>
 	</div>
@@ -48,8 +48,8 @@
 			<a href="./index.html">首页</a> ｜ 
 			<a href="./article_list.html">往期回顾</a> ｜ 
 			<a href="./college.html">大学生专栏</a> ｜ 
-			<a href="./about.html">关于我们</a> ｜ 
-			<a href="./message.html">留言板</a>
+			<a href="./about.html">关于我们</a> 
+			<!-- <a href="./message.html">留言板</a> -->
 		</div>
 		<!-- bottom_nav end -->
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
