--- a/mobile/index.html
+++ b/mobile/index.html
@@ -18,8 +18,8 @@
 	<div class="header clearfix" id="header">
 		<img class="logo" src="../images/logo.jpg" alt="">
 		<p class="website">huandoo.cn</p>
-		<a class="btn btn-primary" href="./message.html">留言板</a>
-		<a class="btn btn-success mr5" href="#add">＋关注</a>
+		<a class="btn btn-default" href="./about.html">关于我们</a>
+		<!-- <a class="btn btn-success mr5" href="#add">＋关注</a> -->
 	</div>
 	
 	<!-- slide begin -->
@@ -69,7 +69,7 @@
 		<p class="tip-text">或者长按保存→微信的扫一扫→右上角从相册选取</p>
 	</div>
 	<div class="totop">
-		<a class="btn btn-primary" href="#header">返回欣赏</a>
+		<a class="btn btn-primary" href="#header">返回顶部</a>
 	</div>
 	<div class="tellyou">声明：所有原创一切权利归作者所有！<br>如若引用转载，请务必先与作者或还读我诗平台联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
