change mobile page

--- a/article_list.html
+++ b/article_list.html
@@ -27,7 +27,7 @@
 		</div>
 	</div>
 	<div class="scrolltext">
-		<marquee behavior="" direction="" scrollamount="8" onmouseover="this.stop()" onmouseout="this.start()" >"还读我诗"公众号平台征稿啦！诗歌、小说、散文等，题材不限，稿酬30元／篇，奖金根据阅读量累计。可推荐投稿，一经采用有20元／篇酬谢推荐者。投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信),欢迎大家的参与！</marquee> 
+		<marquee behavior="" direction="" scrollamount="8" onmouseover="this.stop()" onmouseout="this.start()" >"还读我诗"公众号平台征稿啦！诗歌、小说、散文等，题材不限，稿酬30元／篇，奖金根据阅读量累计。可推荐投稿，一经采用有20元／篇酬谢推荐者。投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信)，欢迎大家的参与！</marquee> 
 	</div>
 	<div class="content">
 		<ul id="article" class="clearfix">
