--- a/mobile/about.html
+++ b/mobile/about.html
@@ -32,6 +32,7 @@
 			<img src="../images/erweima.jpg" alt="">
 		</div>
 		<p class="tip">微信扫一扫，关注我们</p>
+		<p class="tip">或者微信搜索公众号：还读我诗</p>
 	</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
 	<script src="../js/bdtj.js"></script>
