--- a/mobile/index.html
+++ b/mobile/index.html
@@ -60,16 +60,9 @@
 			<a v-bind:href="item.url">{{item.name}} <span>｜ {{item.author}}</span></a>
 		</div>
 	</div>
-	
-	<h2 class="title">来了给个关注再走呗 <i class="fa fa-heart"></i></h2>
-	<div class="add" id="add">
-		<div class="img-box"><img src="../images/erweima.jpg" alt=""></div>
-		<p class="tip-text">微信扫一扫，关注我们</p>
-		<p class="tip-text">或者微信搜索公众号：还读我诗</p>
-		<p class="tip-text">或者长按保存→微信的扫一扫→右上角从相册选取</p>
-	</div>
+	<p class="tips">更多精彩在微信公众号：还读我诗</p>
 	<div class="totop">
-		<a class="btn btn-primary" href="#header">返回顶部</a>
+		<a class="btn btn-primary btn-lg" href="#header">返回顶部</a>
 	</div>
 	<div class="tellyou">声明：所有原创一切权利归作者所有！<br>如若引用转载，请务必先与作者或还读我诗平台联系！</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
