--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<a href="./index.html">首页</a> ｜ 
 			<a href="./article_list.html">往期回顾</a> ｜ 
 			<a href="./college.html">大学生专栏</a> ｜ 
-			<a href="./about.html">关于我们</a>
+			<a href="./about.html">关于我们</a> ｜ 
 			<!-- <a href="./message.html">留言板</a> ｜  -->
 			<a href="http://www.tuling123.com/static/talk/?a=12187%2FbrhR&u=fae01ba1bbfe70131668b038db670691" target="_blank">客服小二</a>
 		</div>
