--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>还读我诗</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
+	<meta name="keywords" content="大成，还读我诗,诗歌,文学,公众号还读我诗,还读" />
+	<meta name="description" content="还读我诗平台" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/index.css">
