--- a/video/index.html
+++ b/video/index.html
@@ -35,6 +35,10 @@
 		.video-cont{
 			margin:0 20px 20px 20px;
 		}
+		.video-cont video{
+			background: url(./images/video.jpg) no-repeat;
+			background: cover;
+		}
 		.video-cont .video-title{
 			margin:10px 20px;
 			font-size:24px;
@@ -79,7 +83,7 @@
 	<div class="hasdays">2017年仅剩&nbsp;<span id="t_d">195</span>&nbsp;天</div>
 	<div class="video-cont">
 		<h2 class="video-title">论装逼，我只服这四个人！</h2>
-		<video width="100%" height="210" controls>
+		<video width="100%" height="194" controls>
   			<source src="move.mp4" type="video/mp4">
   			<source src="move.ogg" type="video/ogg">
 			您的浏览器不支持Video标签。
