--- a/video/index.html
+++ b/video/index.html
@@ -36,7 +36,7 @@
 			margin:0 20px 20px 20px;
 		}
 		.video-cont video{
-			background: url(./images/video.jpg) no-repeat;
+			background: url(./images/video.jpg) no-repeat 100% 100%;
 			background: cover;
 		}
 		.video-cont .video-title{
@@ -83,7 +83,7 @@
 	<div class="hasdays">2017年仅剩&nbsp;<span id="t_d">195</span>&nbsp;天</div>
 	<div class="video-cont">
 		<h2 class="video-title">论装逼，我只服这四个人！</h2>
-		<video width="100%" height="194" controls>
+		<video width="100%" height="220" controls>
   			<source src="move.mp4" type="video/mp4">
   			<source src="move.ogg" type="video/ogg">
 			您的浏览器不支持Video标签。
