--- a/love/pingping/index.html
+++ b/love/pingping/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>love you forever</title>
+<title>Love you forever</title>
 
 <style type="text/css">
 @font-face {
@@ -78,6 +78,6 @@ if (!document.createElement('canvas').getContext) {
 	$("#code").typewriter();
 }
 </script>
-
+<script src="../../js/bdtj.js"></script>
 </body>
 </html>
