--- a/college.html
+++ b/college.html
@@ -10,6 +10,7 @@
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/college.css">
+	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -23,9 +24,13 @@
 			</ul>
 		</div>
 	</div>
+	<!-- scrolltext  begin -->
 	<div id="scrolltext" class="scrolltext" v-clock>
-		<marquee behavior="" direction="" scrollamount="8" onmouseover="this.stop()" onmouseout="this.start()" >{{text}}</marquee> 
+		<ul class="clearfix">
+			<li>{{text}}</li>
+		</ul>
 	</div>
+	<!-- scrolltext  end -->
 	<div class="content">
 		<ul id="college" class="clearfix" v-clock>
 			<li v-for="item in items">
@@ -67,7 +72,7 @@
 			})
 		})
 	</script>
-	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
+	<script src="./js/scrolltext.js"></script>
 	<script src="./js/vue.min.js"></script>
 	<script src="./js/college.js"></script>
 	<script src="./js/totop.js"></script>
