--- a/mobile/index.html
+++ b/mobile/index.html
@@ -54,12 +54,18 @@
        <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">大学生文学作品征稿了！“还读我诗”公众号平台新近推出大学生文学作品专栏，想不想把你自己的故事讲给我们听呢？可将故事以诗歌、小说、散文等形式分享给我们，每篇100元稿酬等你拿哦！投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信)。</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
-	<div id="article" class="list-cont">
+	<!-- <div id="article" class="list-cont">
 		<div class="article-list" v-clock v-for="item in items">
 			<a v-bind:href="item.url">{{item.name}} <span>｜ {{item.author}}</span></a>
 		</div>
+	</div> -->
+	<div id="article" class="list-cont">
+		<div class="article-list" v-clock v-for="item in items">
+			<a v-bind:href="item.url">{{item.name}}</a>
+			<div class="msg"><span class="author"><i class="fa fa-user"></i> ：{{item.author}}</span><span class="time"><i class="fa fa-clock-o"></i> ：{{item.time}}</span></div>
+		</div>
 	</div>
-	<p class="tips">更多精彩在微信公众号：还读我诗</p>
+	<p class="tips">更多精彩尽在微信公众号：还读我诗</p>
 	<div class="totop">
 		<a class="btn btn-primary btn-lg" href="#header">返回顶部</a>
 	</div>
