change mobile page

--- a/mobile/about.html
+++ b/mobile/about.html
@@ -35,6 +35,6 @@
 		<p class="tip">或者微信搜索公众号：还读我诗</p>
 	</div>
 	<div class="tellyou copy">Copyright © 2016-2017 还读我诗 版权所有</div>
-	<script src="../js/bdtj.js"></script>
+	<script src="./js/bdtj.js"></script>
 </body>
 </html>
