--- a/mobile/index.html
+++ b/mobile/index.html
@@ -51,14 +51,9 @@
 		});     
 	</script>
 	<div class="scrolltext">
-       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">大学生文学作品征稿了！“还读我诗”公众号平台新近推出大学生文学作品专栏，想不想把你自己的故事讲给我们听呢？可将故事以诗歌、小说、散文等形式分享给我们，每篇100元稿酬等你拿哦！投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信)。</marquee> 
+       <i class="fa fa-volume-down icon"></i><marquee class="text" behavior="" direction="" scrollamount="3">"还读我诗"公众号平台征稿啦！诗歌、小说、散文等，题材不限，稿酬30元／篇，奖金根据阅读量累计。可推荐投稿，一经采用有20元／篇酬谢推荐者。投稿邮箱：huanduwoshi2016@126.com，联系方式：Whia2021(个人微信)，欢迎大家的参与！</marquee> 
     </div>
 	<h2 class="title mt10">往期欣赏</h2>
-	<!-- <div id="article" class="list-cont">
-		<div class="article-list" v-clock v-for="item in items">
-			<a v-bind:href="item.url">{{item.name}} <span>｜ {{item.author}}</span></a>
-		</div>
-	</div> -->
 	<div id="article" class="list-cont">
 		<div class="article-list" v-clock v-for="item in items">
 			<a v-bind:href="item.url">{{item.name}}</a>
