--- a/browser.html
+++ b/browser.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="header">
                 <i></i>
-                <p>为保证您更好的上网体验，建议您使用以下浏览器的最新版本</p>
+                <p>您的浏览器版本实在太低了，建议您使用以下浏览器的最新版本</p>
             </div>
             <div class="bs">
                 <span class="bs-block bsi-chrome">
